--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 25px;
+  gap: 50px;
   margin: 0 auto;
   padding: 0 254px;
 }
@@ -86,8 +86,17 @@ h4 {
   align-items: center;
   border-radius: 100px;
   background: white;
-  padding: 5px 30px;
+  color: var(--base-blue);
+  padding: 20px 30px;
   border: 1px;
+}
+
+.header-menu a {
+  color: var(--base-blue);
+}
+
+.number {
+  color: var(--base-blue);
 }
 
 .details {
