--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@
   --base-text: #385462;
   --base-text-70: var(--base-text) 70%;
   --base-text-50: var(--base-text) 50%;
-
-  font-size: 62.5%;
 }
 
 a:link {
@@ -145,6 +143,95 @@ h4 {
 .dp2,
 .dp4 {
   background: rgb(211, 211, 211);
+}
+
+.surfing {
+  color: var(--base-blue);
+  max-width: 900px;
+  line-height: 10px;
+}
+
+.company {
+  display: flex;
+  color: white;
+  gap: 20px;
+  margin-bottom: 282px;
+}
+
+.company-about {
+  border-radius: 35px;
+  padding: 20px;
+  margin-bottom: 20px;
+  background: var(--base-blue);
+}
+
+.company-count {
+  display: flex;
+  justify-content: center;
+  border-radius: 35px;
+  padding: 20px 50px;
+  background: white;
+  color: var(--base-blue);
+  box-shadow: 0 0 2px black;
+}
+
+.svg-avatar {
+  margin-left: -20px;
+}
+
+.students {
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.students h3,
+.students p {
+  margin: 0;
+}
+
+.company-both {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.comment {
+  font-weight: 500;
+  font-size: 45px;
+  color: var(--base-blue);
+  margin-bottom: 220px;
+}
+
+.rewards {
+  padding: 30px;
+  background: white;
+}
+
+.rewards-text {
+  color: var(--base-blue);
+  display: flex;
+  gap: 40px;
+}
+
+.rewards-photo-1 {
+  display: flex;
+  align-items: center;
+  background-color: var(--light-blue);
+  border-radius: 60px;
+  background: white;
+}
+
+.rewards-photo-1-background {
+  padding: 30px;
+  background: var(--light-blue);
+  border-radius: 35px;
+}
+
+.rewards-photo-1-text {
+  margin-left: 114px;
+  color: var(--base-blue);
 }
 
 @font-face {
