--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ a:link {
 body {
   font-family: FormaDJRCyrillicDeck;
   background-color: #eef5ff;
+  box-sizing: border-box;
 }
 
 .text-16 {
@@ -117,8 +118,8 @@ h4 {
 
 .description-photo {
   display: flex;
-  justify-content: space-between;
-  align-items: stretch;
+  justify-content: space-evenly;
+  align-content: stretch;
   gap: 30px;
   background: white;
   border-radius: 60px;
@@ -153,6 +154,7 @@ h4 {
 
 .company {
   display: flex;
+  align-content: stretch;
   color: white;
   gap: 20px;
   margin-bottom: 282px;
@@ -193,8 +195,8 @@ h4 {
 .company-both {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: stretch;
+  justify-content: space-between;
 }
 
 .comment {
