--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ h4 {
 
 .description-photo {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-content: stretch;
   gap: 30px;
   background: white;
@@ -144,6 +144,7 @@ h4 {
 .dp2,
 .dp4 {
   background: rgb(211, 211, 211);
+  color: var(--base-blue);
 }
 
 .surfing {
@@ -156,7 +157,7 @@ h4 {
   display: flex;
   align-content: stretch;
   color: white;
-  gap: 20px;
+  gap: 10px;
   margin-bottom: 282px;
 }
 
@@ -171,7 +172,7 @@ h4 {
   display: flex;
   justify-content: center;
   border-radius: 35px;
-  padding: 20px 50px;
+  padding: 14px 40px;
   background: white;
   color: var(--base-blue);
   box-shadow: 0 0 2px black;
@@ -196,7 +197,7 @@ h4 {
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  justify-content: space-between;
+  align-content: stretch;
 }
 
 .comment {
