--- a/style.css
+++ b/style.css
@@ -67,12 +67,22 @@ h4 {
   color: var(--red);
 }
 
+.bg-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: url("public/bg-image\ 1.png") no-repeat center top / cover;
+  z-index: -1;
+}
+
 .header-container {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 50px;
-  margin: 0 auto;
+  margin-bottom: 130px;
   padding: 0 254px;
 }
 
@@ -92,6 +102,12 @@ h4 {
 
 .header-menu a {
   color: var(--base-blue);
+}
+
+.svgPhone {
+  display: flex;
+  gap: 10px;
+  align-content: center;
 }
 
 .number {
@@ -163,7 +179,7 @@ h4 {
 
 .company-about {
   border-radius: 35px;
-  padding: 20px;
+  padding: 0 20px;
   margin-bottom: 20px;
   background: var(--base-blue);
 }
@@ -196,8 +212,9 @@ h4 {
 .company-both {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  align-content: stretch;
+  flex-wrap: wrap;
+  align-content: space-between;
+  justify-content: stretch;
 }
 
 .comment {
