--- a/style.css
+++ b/style.css
@@ -179,6 +179,16 @@ h4 {
   margin-bottom: 282px;
 }
 
+.company-screen {
+  position: relative;
+}
+
+.company-surf-overlay {
+  position: absolute;
+  top: 37%;
+  left: 31%;
+}
+
 .company-about {
   border-radius: 35px;
   padding: 40px;
