--- a/style.css
+++ b/style.css
@@ -460,6 +460,54 @@ h4 {
 
 .order {
   position: relative;
+  font-family: FormaDJRCyrillicDeck;
+  color: var(--base-blue);
+}
+
+.order-photo {
+  width: 550px;
+  height: 400px;
+  margin-left: 100px;
+  object-fit: cover;
+  object-position: right;
+  border-radius: 60px;
+}
+
+.order-form-all {
+  display: flex;
+  justify-content: space-around;
+}
+
+.order-form-forms {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 30px;
+}
+
+.order-form-forms p {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: start;
+}
+
+.order-form {
+  border-radius: 60px;
+  padding: 5px 15px;
+}
+
+.order-form-tarif {
+  grid-column: 1 / span 2;
+}
+
+.order-form-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--linear-red);
+  color: white;
+  font-size: 24px;
+  font-weight: 400;
 }
 
 .order-text {
@@ -467,6 +515,15 @@ h4 {
   align-items: center;
   gap: 30px;
   color: var(--base-blue);
+}
+
+.order-form-text {
+  color: var(--base-blue);
+  font-family: FormaDJRCyrillicDeck;
+  font-size: 20px;
+  font-weight: 400;
+  border-radius: 60px;
+  padding-left: 20px;
 }
 
 @font-face {
