--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ body {
   margin: 8px 0;
 }
 
+p {
+  font-size: 20px;
+  font-weight: 120%;
+  margin: 8px 0;
+}
+
 h1 {
   font-size: 116px;
   font-weight: 110%;
